--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,225 @@
-/* 
-    General Styles
-*/
+
+
+
+
+* {
+  font-family: Arial, Helvetica, sans-serif;
+  --animate-duration: 1000ms;
+  --animate-delay: 5s;
+  
+  
+}
+
+body {
+  background-color: rgb(34, 37, 41);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  
+  
+  
+  
+  
+}
+
+footer {
+  
+  
+  bottom: 0;
+  width: 100%;
+  color: darkgoldenrod;
+  margin-top: auto;
+}
+.navbar-logo {
+  width: 400px;
+  height: auto;
+  filter: drop-shadow(0px 0px 25px #ffffffc9);
+  transition: filter 0.3s ease, 0.3s ease;
+}
+
+.navbar-logo:hover {
+  filter: drop-shadow(0px 0px 35px #ffffff);
+}
+
+.navlink {
+  color: darkgoldenrod;
+  transition: filter 0.3s ease, 0.3s ease;
+}
+.navlink:hover {
+  color: rgb(238, 199, 102);
+  filter: drop-shadow(0px 0px 15px #ffffff);
+}
+.active-link {
+  color: rgb(255, 230, 153);
+}
+
+.video-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ajusta el video para cubrir toda el área */
+  z-index: -1;
+  
+}
+
+.card{
+  
+  
+  transition: transform 0.6s ease, 0.3s ease;
+  background-color: rgba(58, 58, 58, 0.483);
+  color: rgb(255, 219, 129);
+  overflow: hidden;
+  
+}
+
+.card:hover{
+  opacity:100%;
+  
+  box-shadow: 0px 0px 20px rgba(255, 249, 231, 0.774);
+  ;
+}
+
+.death{
+  width: 500px;
+  
+  
+  
+  
+}
+.deathdiv{
+  padding-bottom: 100px;
+  margin-top: 50px;
+  
+ 
+}
+
+/*LOADER*/
+.lds-ellipsis {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+
+.lds-ellipsis div {
+  position: absolute;
+  top: 33px;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background: #fff;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+
+.lds-ellipsis div:nth-child(1) {
+  left: 8px;
+  animation: lds-ellipsis1 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(2) {
+  left: 8px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(3) {
+  left: 32px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(4) {
+  left: 56px;
+  animation: lds-ellipsis3 0.6s infinite;
+}
+
+@keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(0);
+  }
+}
+
+@keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+
+  100% {
+    transform: translate(24px, 0);
+  }
+}
+
+/*BOTON CARD*/
+
+.Btn {
+  margin-top: 10px;
+  /* width: 100px; */
+  height: 40px;
+  border: none;
+  border-radius: 10px;
+  background: linear-gradient(to right,#77530a,#ffd277,#77530a,#77530a,#ffd277,#77530a);
+  background-size: 250%;
+  background-position: left;
+  color: #ffd277;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition-duration: 1s;
+  overflow: hidden;
+}
+
+.Btn::before {
+  position: absolute;
+  content: "INFO";
+  color: #ffd277;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 97%;
+  height: 90%;
+  border-radius: 8px;
+  transition-duration: 1s;
+  background-color: rgba(0, 0, 0, 0.842);
+  background-size: 200%;
+}
+
+.Btn:hover {
+  background-position: right;
+  transition-duration: 1s;
+}
+
+.Btn:hover::before {
+  background-position: right;
+  transition-duration: 1s;
+}
+
+.Btn:active {
+  transform: scale(0.95);
+}
+
+.cardimg{
+  transition: transform 0.6s ease, 0.3s ease;
+}
+
+.cardimg:hover{
+transform: scale(1.1);
+overflow: hidden;
+}
+
+/* FAVORITE ICON */
