--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,13 +1,7 @@
-
-
-
-
 * {
   font-family: Arial, Helvetica, sans-serif;
-  --animate-duration: 1000ms;
+  --animate-duration: 2000ms;
   --animate-delay: 5s;
-  
-  
 }
 
 body {
@@ -15,16 +9,9 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  
-  
-  
-  
-  
 }
 
 footer {
-  
-  
   bottom: 0;
   width: 100%;
   color: darkgoldenrod;
@@ -61,38 +48,31 @@ footer {
   height: 100%;
   object-fit: cover; /* Ajusta el video para cubrir toda el área */
   z-index: -1;
-  
 }
 
-.card{
-  
-  
+.card {
   transition: transform 0.6s ease, 0.3s ease;
   background-color: rgba(58, 58, 58, 0.483);
   color: rgb(255, 219, 129);
   overflow: hidden;
+}
+
+.card:hover {
+  opacity: 100%;
+
   
 }
 
-.card:hover{
-  opacity:100%;
-  
-  box-shadow: 0px 0px 20px rgba(255, 249, 231, 0.774);
-  ;
-}
-
-.death{
+.death {
   width: 500px;
-  
-  
-  
-  
+  transition: filter 0.3s ease, 0.3s ease;
 }
-.deathdiv{
+.deathdiv {
   padding-bottom: 100px;
   margin-top: 50px;
-  
- 
+}
+.death:hover {
+  filter: drop-shadow(0px 0px 100px #ffffff);
 }
 
 /*LOADER*/
@@ -171,7 +151,15 @@ footer {
   height: 40px;
   border: none;
   border-radius: 10px;
-  background: linear-gradient(to right,#77530a,#ffd277,#77530a,#77530a,#ffd277,#77530a);
+  background: linear-gradient(
+    to right,
+    #77530a,
+    #ffd277,
+    #77530a,
+    #77530a,
+    #ffd277,
+    #77530a
+  );
   background-size: 250%;
   background-position: left;
   color: #ffd277;
@@ -213,13 +201,85 @@ footer {
   transform: scale(0.95);
 }
 
-.cardimg{
+.cardimg {
   transition: transform 0.6s ease, 0.3s ease;
 }
 
-.cardimg:hover{
-transform: scale(1.1);
-overflow: hidden;
+.cardimg:hover {
+  transform: scale(1.1);
+  overflow: hidden;
 }
 
-/* FAVORITE ICON */
+/* texto SW */
+
+.animación {
+  width: 100%;
+  min-height: 80vh;
+  top: 0px;
+  position: absolute;
+  overflow: hidden;
+}
+
+section {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  height: 540px;
+  perspective: 300px;
+  color: #ffeaaa;
+  font-family: "Pathway Gotic One", sans-serif;
+  font-size: 70px;
+  font-weight: 600;
+  letter-spacing: 6px;
+  line-height: 160%;
+  text-align: justify;
+
+  opacity: 100%;
+  z-index: -1;
+  overflow: hidden;
+}
+.contenido-texto {
+  
+  top: 100%;
+  font-size: inherit;
+  transform-origin: 40% 100%;
+  animation: movimiento 60s linear forwards;
+}
+
+@keyframes movimiento {
+  0% {
+    top: 100%;
+    transform: rotateX(20deg) translateZ(0);
+    opacity: 0;
+  }
+  1% {
+    opacity: 1;
+  }
+  100% {
+    top: -100px;
+    transform: rotateX(30deg) translateY(-4700px);
+    opacity: 1;
+  }
+}
+
+.jumbo {
+  background-color: rgba(57, 57, 57, 0.597);
+  border-radius: 20px;
+}
+
+.imgjumbo{
+  overflow: hidden;  
+}
+
+.info{
+  display: block;
+}
+
+.textInfo{
+  
+  font-family:'Courier New', Courier, monospace;
+  
+}
+
+
+
